[package]
name = "cortex-client"
version = "0.1.0"
authors = ["Gianluca Brigandi, OpenAPI Generator team and contributors"]
description = "API for Cortex, a powerful observable analysis and active response engine."
license = "MIT"
edition = "2021"
repository = "https://github.com/gbrigandi/cortex-client-rs"
homepage = "https://github.com/gbrigandi/cortex-client-rs"
documentation = "https://docs.rs/cortex-client-rs"
keywords = ["cortex", "api", "security", "threatintelligence", "soc"]
categories = ["api-bindings", "web-programming::http-client", "asynchronous"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
